--- a/templates/menu.html
+++ b/templates/menu.html
@@ -21,7 +21,7 @@
                     <span class="ion-person tac" title="profile" aria-hidden="true"></span>
                     <div class="head-text">Profile</div>
                     <i class="icon ion-chevron-down"></i>
-                    <ion-list>
+                    <ion-list class="cls-margin">
                         <ion-item nav-clear menu-close href="#/app/profile" class="menumain">
                             <span class="ion-information tac" title="profile" aria-hidden="true"></span>
                             <div class="head-text">Information</div>
@@ -41,7 +41,7 @@
                     <div class="head-text">Posting
                     </div>
                     <i class="icon ion-chevron-down"></i>
-                    <ion-list>
+                    <ion-list class="cls-margin">
                         <ion-item nav-clear menu-close href="#/app/postfb" class="menumain">
                             <span class="ion-social-facebook tac" title="profile" aria-hidden="true"></span>
                             <div class="head-text">Facebook</div>
