--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,12 +1,12 @@
 <ion-view class="bgprofile title-main">
     <ion-nav-bar class="bgtrans">
-<ion-nav-back-button>
-</ion-nav-back-button>
+        <ion-nav-back-button>
+        </ion-nav-back-button>
         <ion-nav-buttons side="left">
             <button class="button button-icon button-clear ion-navicon menu-btncolor" menu-toggle="left">
             </button>
         </ion-nav-buttons>
-<!--
+        <!--
       <div class="titlemain">
     Profile
     <hr class="vertical-title">
@@ -18,7 +18,7 @@
         </ion-nav-buttons>
     </ion-nav-bar>
     <ion-content class="no-header">
-        <div class="profile-cont">
+        <div class="profile-cont" ng-click="mkopen();" ng-class="shldopens">
             <div class="titlemain">
                 Profile
                 <hr class="vertical-title">
