--- a/templates/profile.html
+++ b/templates/profile.html
@@ -6,19 +6,13 @@
             <button class="button button-icon button-clear ion-navicon menu-btncolor" menu-toggle="left">
             </button>
         </ion-nav-buttons>
-        <!--
-      <div class="titlemain">
-    Profile
-    <hr class="vertical-title">
-</div>
--->
         <ion-nav-buttons side="right">
             <button class="button button-icon button-clear ion-gear-a menu-btncolor">
             </button>
         </ion-nav-buttons>
     </ion-nav-bar>
     <ion-content class="no-header">
-        <div class="profile-cont" ng-click="mkopen();" ng-class="shldopens">
+        <div class="profile-cont" ng-class="shldopens" ng-click="mkopen();">
             <div class="titlemain">
                 Profile
                 <hr class="vertical-title">
