--- a/templates/menu.html
+++ b/templates/menu.html
@@ -21,7 +21,7 @@
                     <span class="ion-person tac" title="profile" aria-hidden="true"></span>
                     <div class="head-text">Profile</div>
                     <i class="icon ion-chevron-down"></i>
-                    <ion-list class="cls-margin" ng-class="shouldopen1">
+                    <ion-list class="cls-margin" ng-class="shouldopen1" class="menu-margin">
                         <ion-item nav-clear menu-close href="#/app/profile" class="menumain">
                             <span class="ion-information tac" title="profile" aria-hidden="true"></span>
                             <div class="head-text">Information</div>
@@ -51,7 +51,7 @@
                             <div class="head-text">Twitter</div>
                         </ion-item>
                         <ion-item nav-clear menu-close href="#/app/suggestedpost" class="menumain">
-                            <span class="ion-social-facebook tac" title="profile" aria-hidden="true"></span>
+                            <span class="ion-ios7-paper tac" title="profile" aria-hidden="true"></span>
                             <div class="head-text">Co-Create</div>
                         </ion-item>
                     </ion-list>
