--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -123,6 +123,54 @@
                         </div>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col col-10">
+                        <div class="rank-lead">
+                            #7
+                        </div>
+                    </div>
+                    <div class="col col-20">
+                        <div class="pic-lead">
+                            <img src="img/score.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="col col-50">
+                        <div class="social-lead">
+                            <h4 class="name">Lorem Ipsum</h4>
+                            <span class="fb-score"><i class="iicon ion-fb1"></i> <span class="lead-score">240</span></span>
+                            <span class="twit-score"><i class="iicon ion-twit"></i> <span class="lead-score">240</span></span>
+                        </div>
+                    </div>
+                    <div class="col col-20">
+                        <div class="score-lead">
+                            200
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col col-10">
+                        <div class="rank-lead">
+                            #7
+                        </div>
+                    </div>
+                    <div class="col col-20">
+                        <div class="pic-lead">
+                            <img src="img/score.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="col col-50">
+                        <div class="social-lead">
+                            <h4 class="name">Lorem Ipsum</h4>
+                            <span class="fb-score"><i class="iicon ion-fb1"></i> <span class="lead-score">240</span></span>
+                            <span class="twit-score"><i class="iicon ion-twit"></i> <span class="lead-score">240</span></span>
+                        </div>
+                    </div>
+                    <div class="col col-20">
+                        <div class="score-lead">
+                            100
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="row like-comnt leader">
                 <div class="col col-33 bod-right">
