--- a/templates/menu.html
+++ b/templates/menu.html
@@ -20,17 +20,17 @@
                 <ion-item nav-clear href="#" class="menumain" ng-click="changeopen1();" ng-class="shouldopen1">
                     <span class="ion-person tac" title="profile" aria-hidden="true"></span>
                     <div class="head-text">Profile</div>
-                    <i class="icon ion-chevron-down"></i>
+                    <i class="icon ion-chevron-up"></i>
                     <ion-list class="cls-margin" class="menu-margin">
                         <ion-item nav-clear menu-close href="#/app/profile" class="menumain">
                             <span class="ion-information tac" title="profile" aria-hidden="true"></span>
                             <div class="head-text">Information</div>
                         </ion-item>
-                        <ion-item nav-clear menu-close href="#/app/postinfofb" class="menumain">
+                        <ion-item nav-clear menu-close href="#/app/table" class="menumain">
                             <span class="ion-social-facebook tac" title="profile" aria-hidden="true"></span>
                             <div class="head-text">Facebook</div>
                         </ion-item>
-                        <ion-item nav-clear menu-close href="#/app/postinfo" class="menumain">
+                        <ion-item nav-clear menu-close href="#/app/tablefb" class="menumain">
                             <span class="ion-social-twitter tac" title="profile" aria-hidden="true"></span>
                             <div class="head-text">Twitter</div>
                         </ion-item>
@@ -40,13 +40,13 @@
                     <span class="ion-email tac" title="posting" aria-hidden="true"></span>
                     <div class="head-text">Posting
                     </div>
-                    <i class="icon ion-chevron-down"></i>
+                    <i class="icon ion-chevron-up"></i>
                     <ion-list class="cls-margin submenu-list">
-                        <ion-item nav-clear menu-close href="#/app/postfb" class="menumain">
+                        <ion-item nav-clear menu-close href="#/app/postinfofb" class="menumain">
                             <span class="ion-social-facebook tac" title="profile" aria-hidden="true"></span>
                             <div class="head-text">Facebook</div>
                         </ion-item>
-                        <ion-item nav-clear menu-close href="#/app/post" class="menumain">
+                        <ion-item nav-clear menu-close href="#/app/postinfo" class="menumain">
                             <span class="ion-social-twitter tac" title="profile" aria-hidden="true"></span>
                             <div class="head-text">Twitter</div>
                         </ion-item>
