--- a/templates/suggestedpost.html
+++ b/templates/suggestedpost.html
@@ -52,12 +52,14 @@
             </div>
             <hr class="vertical-blue width-hr">
             <div class="btncreate">
-                <button class="button button-small button-positive savebtn btn-create">
-                    Create Your Own
-                </button>
+                <a href="#/app/suggestpost">
+                    <button class="button button-small button-positive savebtn btn-create">
+                        Create Your Own
+                    </button>
+                </a>
             </div>
             <div class="view-all">
-                <a href="#">View all</a>
+                <a href="#/app/createpost">View all</a>
             </div>
         </div>
     </ion-content>
