--- a/templates/home.html
+++ b/templates/home.html
@@ -33,13 +33,13 @@
         <hr class="home-divid">
         <div class="home-socials">
             <div class="home-fb">
-                <a href="#/app/postinfofb"> <i class="icon icon-fb"></i>
+                <a href="#/app/tablefb"> <i class="icon icon-fb"></i>
                     <div class="home-fb1">Facebook</div>
                 </a>
 
             </div>
             <div class="home-twit">
-                <a href="#/app/postinfo"> <i class="icon icon-twit"></i>
+                <a href="#/app/table"> <i class="icon icon-twit"></i>
                     <div class="home-twit1">Twitter</div>
                 </a>
 
