--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -4,23 +4,28 @@
             <img src="img/logos.png">
         </div>
         <div class="wel-content">
-<div class="headwelcome">
-    <h5>Lorem Ipsum Lorem Ipsum</h5>
-    <h5>Lorem Ipsum Lorem Ipsum</h5>
-</div>
-<div class="welcm-share">
-    <p>Share on</p>
-    <a href="#">  <span class="ion-social-facebook"></span></a>
-    <a href="#">  <span class="ion-social-twitter"></span></a>
-</div>
-      <div class="welcm-btn">
-       <button class="button button-small">
-  Edit
-</button>
-        <button class="button button-small">
-  Use later
-</button>
+            <div class="headwelcome">
+                <h5>Lorem Ipsum Lorem Ipsum</h5>
+                <h5>Lorem Ipsum Lorem Ipsum</h5>
+            </div>
+            <div class="welcm-share">
+                <p>Share on</p>
+                <a href="#"> <span class="ion-social-facebook"></span>
+                </a>
+                <a href="#"> <span class="ion-social-twitter"></span>
+                </a>
+            </div>
+            <div class="welcm-btn">
+                <button class="button button-small" ng-click="openedit()">
+                    Edit
+                </button>
+                <button class="button button-small">
+                    Use later
+                </button>
             </div>
         </div>
+
+
+
     </ion-content>
 </ion-view>
