--- a/css/style.css
+++ b/css/style.css
@@ -2062,7 +2062,8 @@ button.button.button-icon.button-clear.ion-gear-a.menu-btncolor {
 
 button.button.back-button.header-item {
     color: #fff!important;
-    margin-top: 0px;
+    margin-top: -2px;
+    position: relative;
 }
 
 button.button.back-button i.icon.ion-ios7-arrow-back {
@@ -2086,4 +2087,52 @@ button.button.back-button.buttons.header-item.green {
 .item .item-content.activated {
     border-color: #ff7701;
     background-color: #ff7701;
+}
+
+.modal {
+    display: block;
+    position: absolute;
+    top: 210px;
+    left: 15px;
+    z-index: 10;
+    overflow: hidden;
+    min-height: 55%;
+    width: 90%;
+    background-color: rgba(255, 255, 255, 0.87);
+}
+
+.buttons.close-modal button {
+    border: 1px solid #0084c4;
+    border-radius: 100%;
+    font-size: 13px;
+    padding: 1px 6px 0px 7px;
+    color: #0084c4;
+    float: right;
+    margin: 9px 10px;
+}
+
+.modal-cont {
+    text-align: center;
+    padding: 35% 15px;
+}
+
+.modal-button {
+    padding-top: 20%;
+}
+
+.cont-modal h4 {
+    color: #0084c4;
+}
+
+.cont-modal {
+    color: #0084c4;
+}
+
+.modal-button button {
+    background-color: #0084c4!important;
+    border-color: #0084c4!important;
+    text-transform: uppercase;
+    font-weight: 500;
+    font-size: 13px;
+    padding: 4px 5px;
 }
